# another-swift-cmake-examples

./: .gitignore  README.md  TODO.md
CInterop/BridgingHeaderCLibrary_SwiftTarget/: my_bridge_header.h
CInterop/CAsModuleSwiftTarget/: CMakeLists.txt
CInterop/CAsModuleSwiftTarget/c_lib/: module.modulemap  mycmath.c
CInterop/CAsModuleSwiftTarget/swift_main/: CMakeLists.txt  Hello.swift
CInterop/ExternalCLibrarySwiftTarget/: build.sh
CInterop/ExternalCSourceSwiftTarget/: CMakeLists.txt
CInterop/FindableCLibrarySwiftTarget/: CMakeLists.txt  SwiftMath.swift
CInterop/FindableCLibrary_SwiftTarget/: CMakeLists.txt  README.md
CInterop/MixedFilesSwiftTarget/: build.sh  cmath.c
CInterop/MixedFilesSwiftTarget-BH/: CMakeLists.txt  cmath.h  my_bridge_header.h
CInterop/MixedFilesSwiftTarget-MM/: Hello.swift
CInterop/ModuleCLibrary_SwiftTarget/swift_main/: CMakeLists.txt
CInterop/SwiftLibCTarget/SwiftLib/: CMakeLists.txt  MySwiftMath.swift
CInterop/SwiftLib_CTarget/: README.md  build.sh
CInterop/SwiftLib_CTarget/SwiftLib/: CMakeLists.txt  MySwiftMath.swift
CInterop/SwiftLib_CTarget/src/: CMakeLists.txt  main_program.c
CInterop/_FindableCLibrary_SwiftTarget/: CMakeLists.txt  Hello.swift  INPROGRESS_DONOTUSE.md  build.sh
CInterop/_SwiftLib_CTarget/: CMakeLists.txt  README.md
CInterop/_SwiftLib_CTarget/SwiftLib/: CMakeLists.txt
CInterop/_SwiftLib_CTarget/src/: CMakeLists.txt  main_program.c
CMakeTricks/: helperFunctions.cmake
CMakeTricks/ReusableFunctions/: CMakeLists.txt  MyReusable.cmake
CMakeTricks/ReusableFunctions/SomeSubDir/: CMakeLists.txt
OUTSIDE/_findable_swift_lib/: CMakeLists.txt  README.md  build.sh
OUTSIDE/fancy_findable_c_lib/: CMakeLists.txt  README.md  build.sh
OUTSIDE/findable_c_lib/: CMakeLists.txt  Config.cmake.in  README.md  _MyFancyMathConfig.cmake  build.sh  module.modulemap  mycmath.c
OUTSIDE/findable_swift_lib/: CMakeLists.txt  Config.cmake.in  README.md  ResponseHandler.swift
OUTSIDE/outside_c_lib/: CMakeLists.txt  module.modulemap
SwiftOnly/Alone/: CMakeLists.txt  Hello.swift  build.sh
SwiftOnly/SingleFile/: CMakeLists.txt  README.md  build.sh
SwiftOnly/UseFindableLibrary/: build.sh
SwiftOnly/UseFindableLibrary/src/: Hello.swift
SwiftOnly/WithLocalLibrary/: CMakeLists.txt  build.sh
SwiftOnly/WithLocalLibrary/lib/: CMakeLists.txt  ResponseHandler.swift
SwiftOnly/WithLocalLibrary/src/: CMakeLists.txt  Hello.swift
SwiftOnly/_UseFindableLibrary/: CMakeLists.txt
SwiftOnly/_UseFindableLibrary/src/: CMakeLists.txt  Extra.swift
TestInstalls/MyFancyMath/: README.md
TestInstalls/MyFancyMath/lib/cmake/MyFancyMath/: MyFancyMathConfig.cmake  MyFancyMathTargets-noconfig.cmake  MyFancyMathTargets.cmake
TestInstalls/MyFancyResponder/lib/cmake/MyFancyResponder/: MyFancyResponderConfig.cmake  MyFancyResponderConfigVersion.cmake  MyFancyResponderTargets-noconfig.cmake  MyFancyResponderTargets.cmake
